Fixed the way the menu looks on mobile.
Addresses #31

--- a/assets/css/src/_defaults.css
+++ b/assets/css/src/_defaults.css
@@ -120,3 +120,13 @@ textarea:focus,
 	min-height: 100vh;
 	display: flex;
 }
+
+.wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content {
+	align-items: start;
+
+	& .wp-block-navigation-item,
+	& .wp-block-navigation__container,
+	& .wp-block-page-list {
+		align-items: start;
+	}
+}
